<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                            https://maven.apache.org/xsd/maven-4.0.0.xsd"
        child.project.url.inherit.append.path="false">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.stanio</groupId>
    <artifactId>xbrz-java</artifactId>
    <version>1.8.3-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>xBRZ for Java Reactor</name>
    <url>https://stanio.github.io/xbrz-java</url>
    <inceptionYear>2020</inceptionYear>
    <licenses>
        <license>
            <name>0BSD</name>
            <url>https://spdx.org/licenses/0BSD</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Stanimir Stamenkov</name>
            <email>stanio@yahoo.com</email>
        </developer>
    </developers>

    <modules>
        <module>xbrz-core</module>
        <module>xbrz-awt</module>
        <module>xbrz-tool</module>
    </modules>

    <scm child.scm.connection.inherit.append.path="false">
        <connection>scm:git:https://github.com/stanio/xbrz-java.git</connection>
        <tag>HEAD</tag>
        <url>https://github.com/stanio/xbrz-java/tree/${project.scm.tag}</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <base.java.version>8</base.java.version>
        <maven.compiler.source>${base.java.version}</maven.compiler.source>
        <maven.compiler.target>${base.java.version}</maven.compiler.target>
        <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
        <javadoc.version>21</javadoc.version>
        <doclint>all,-missing</doclint>
        <javadoc.debug>${debug}</javadoc.debug>
        <javadoc.notimestamp>true</javadoc.notimestamp>
        <maven.install.skip>true</maven.install.skip>
        <maven.deploy.skip>true</maven.deploy.skip>
        <release.url>https://github.com/stanio/xbrz-java/releases/tag/${project.scm.tag}</release.url>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.4.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                    <executions>
                        <execution>
                            <id>default-compile</id>
                            <configuration>
                                <release>${base.java.version}</release>
                                <compileSourceRoots>
                                    <compileSourceRoot>${project.build.sourceDirectory}</compileSourceRoot>
                                </compileSourceRoots>
                            </configuration>
                        </execution>
                        <execution>
                            <id>java9-compile</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                            <configuration>
                                <release>9</release>
                                <compileSourceRoots>
                                    <compileSourceRoot>${project.basedir}/src/main/java9</compileSourceRoot>
                                </compileSourceRoots>
                                <multiReleaseOutput>true</multiReleaseOutput>
                            </configuration>
                        </execution>
                        <execution>
                            <id>default-testCompile</id>
                            <configuration>
                                <!--release>9</release-->
                                <compilerArgs>
                                    <arg>-Xbootclasspath/a:${project.build.outputDirectory}/META-INF/versions/9</arg>
                                    <!--arg>- -patch-module</arg>
                                    <arg>${module.name}=${project.build.outputDirectory}/META-INF/versions/9</arg-->
                                </compilerArgs>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.4.2</version>
                    <configuration>
                        <archive>
                            <manifest>
                                <addDefaultEntries>false</addDefaultEntries>
                                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            </manifest>
                            <manifestEntries>
                                <SCM-Revision>${scm.revision}</SCM-Revision>
                                <Build-Time>${maven.build.timestamp}</Build-Time>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.3</version>
                    <configuration>
                        <additionalClasspathElements>
                            ${project.build.outputDirectory}/META-INF/versions/9
                        </additionalClasspathElements>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.11.2</version>
                    <configuration>
                        <release>${javadoc.version}</release>
                        <!--jdkToolchain>
                            <version>${javadoc.version}</version>
                        </jdkToolchain-->
                        <debug>${javadoc.debug}</debug>
                        <notimestamp>${javadoc.notimestamp}</notimestamp>
                        <tags>
                            <tag>
                                <name>apiNote</name>
                                <placement>a</placement>
                                <head>API Note:</head>
                            </tag>
                            <tag>
                                <name>implSpec</name>
                                <placement>a</placement>
                                <head>Implementation Requirements:</head>
                            </tag>
                            <tag>
                                <name>implNote</name>
                                <placement>a</placement>
                                <head>Implementation Note:</head>
                            </tag>
                        </tags>
                        <header><![CDATA[<div style="margin-top: 14px"
                                ><strong><a href="]]>${project.scm.url}<![CDATA[" style="text-transform: none; font-style: italic"
                                >]]>${project.name} ${project.version}<![CDATA[</a></strong></div>]]></header>
                        <bottom>Public domain {inceptionYear}, {currentYear}</bottom>
                        <offlineLinks>
                            <offlineLink>
                                <url>https://stanio.github.io/xbrz-java/apidocs/</url>
                                <location>${maven.multiModuleProjectDirectory}/docs/apidocs/</location>
                            </offlineLink>
                        </offlineLinks>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.18.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>1.7.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.4</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.5.0</version>
                    <executions>
                        <execution>
                            <id>demo</id>
                            <configuration>
                                <skip>true</skip>
                                <!-- XXX: Required even with skipped executions -->
                                <mainClass>dummy</mainClass>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <buildNumberPropertyName>scm.revision</buildNumberPropertyName>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                    <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <configuration>
                    <flattenMode>ossrh</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten-clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>java9-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.basedir}/src/main/java9</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadoc</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.7</version>
                        <executions>
                            <execution>
                                <id>sign-release-artifacts</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>apidoc</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <inherited>false</inherited>
                        <configuration>
                            <doctitle>xBRZ for Java ${project.version} API</doctitle>
                            <windowtitle>xBRZ for Java ${project.version}</windowtitle>
                            <header><![CDATA[<div style="margin-top: 14px"
                                    ><strong><a href="]]>${release.url}<![CDATA[" style="text-transform: none; font-style: italic"
                                    >]]>xBRZ for Java ${project.version}<![CDATA[</a></strong></div>]]></header>
                            <!--
                              - The xbrz-tool module-info doesn't specify requirement on
                              - "io.github.stanio.xbrz.awt" as it packages it internally,
                              - unlike the non-shaded JAR used for aggregate javadoc generation.
                              -->
                            <additionalOptions>
                                <additionalOption>--add-reads</additionalOption>
                                <additionalOption>io.github.stanio.xbrz.tool=io.github.stanio.xbrz.awt</additionalOption>
                            </additionalOptions>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

</project>
